--- a/config.toml
+++ b/config.toml
@@ -1,25 +1,153 @@
-baseURL = "https://olka.github.io/personal-blog/"
-publishDir = "docs"
+baseURL = "https://olka.github.io/"
+DefaultContentLanguage  = "en"
+title                   = "Root cause all the things"
+theme                   = "hugo-future-imperfect-slim"
+preserveTaxonomyNames   = true
+paginate                = 3
+disqusShortname         = ""
+googleAnalytics         = ""
+pluralizeListTitles     = false
 
 [params]
-    sidebartitle = "Alex Kachur's"
-    sidebartagline = "Tech Blog"
-    sidebarphoto = "https://raw.githubusercontent.com/olka/personal-blog/master/static/img/photo.jpg"
-    languageCode = "en-us"
+  # Loads CSS and JavaScript files. The variable is an array so that you can load
+  # multiple/additional files if necessary. The standard theme files can be loaded
+  # by adding the value, "default". Default includes the add-on.css and and-on.js.
+  # Example: ["default", "/path/to/file"]
+  cssFiles              = ["default"]
+  jsFiles               = ["default"]
+  # Sets options for highlight.js
+  highlightjs           = true
+  highlightjsTheme      = "zenburn"
+  highlightjsLang       = ["html", "js", "java", "bash"]
+  # Sets where "View More Posts" links to
+  viewMorePostsLink     = "/blog/"
+  # Activate Estimated Reading Times, which appear in the post headers
+  readingTime           = true
+  # Sets which Social Share links appear in posts.
+  # Options are twitter, facebook, reddit, linkedin, pinterest, email
+  #socialShare           = ["twitter", "facebook", "reddit", "linkedin", "pinterest", "email"]
 
-[[menu.social]]
-    pre = "<i class='fa fa-linkedin'></i>"
-    url = "https://www.linkedin.com/in/alexkachur"
-    identifier = "linkedin"    
+  [params.meta]
+    # Sets the meta tag description
+    description         = "Tech blog"
+    # Sets the meta tag author
+    author              = "Alex Kachur"
+    # If you would like to add more comprehensive favicon support passed root
+    # directory favicon.ico, utlize this funtion. It is recommened to use
+    # https://realfavicongenerator.net to generate your icons as that is the basis
+    # for the theme's naming.
+    favicon             = false
+    svg                 = true
+    faviconVersion      = "1"
+    msColor             = "#ffffff" # Copy from the https://realfavicongenerator.net
+    iOSColor            = "#ffffff" # Copy from the https://realfavicongenerator.net
 
-[[menu.social]]
-    pre = "<i class='fa fa-github'></i>"
-    url = "https://github.com/olka"
-    identifier = "github"
+  [params.header]
+    # Sets the navbarTitle that appears in the top left of the navigation bar
+    navbarTitle         = "RCAtT"
+    # Sets navbarTitle to match the section of the website
+    dynamicTitles       = true
+    searchMenu          = true
+    shareMenu           = false
+    languageMenu        = false
 
-nocomment = false
-notoc = false
-totop = true
-banner = "none"
-bannerfill = true
-bannerinline = true
+  # These are optional params related to the sidebar. They are recommended, but not
+  # required for proper functionality. HTML is supported within the params.
+  [params.intro]
+    header                = "Root cause all the things"
+    paragraph             = "Tech blog"
+    rssIntro              = false
+    socialIntro           = false
+
+    # This appears at the top of the sidebar above params.intro.header.
+    # A width of less than 100px is recommended from a design perspective.
+    [params.intro.pic]
+      src                 = "/img/photo.jpg"
+      # Masks image in a certain shape. Supported are circle, triangle, diamond, and hexagon.
+      shape               = "circle"
+      width               = "100"
+      alt                 = ""
+
+  [params.sidebar]
+    about               = "test"
+    # Sets the number of recent posts to show in the sidebar. The default value is 5.
+    postAmount          = 5
+    # set to show or to hide categories in the sidebar
+    categories          = true
+    # Sets Categories to sort by number of posts instead of alphabetical
+    categoriesByCount   = true
+
+  [params.footer]
+    # Sets RSS icons to appear on the sidebar with the social media buttons
+    rssFooter           = true
+    # Sets Social Media icons to appear on the sidebar
+    socialFooter        = true
+
+  # Disqus will take priority over Staticman (github.com/eduardoboucas/staticman)
+  # due to its ease of use. Feel free to check out both and decide which you would
+  # prefer to use. See staticman.yml for additional settings.
+  [params.staticman]
+    # If using GitHub, go to https://github.com/apps/staticman-net
+    # If using GitLab, just add the GitLab bot, NO need to hit `/connect/v3/...`
+    enabled             = false
+    api                 = ""  # without trailing slash, defaults to "api.staticman.net"
+    gitProvider         = "github"  # either "github" or "gitlab"
+    username            = ""
+    repo                = ""
+    branch              = ""
+
+    [params.staticman.recaptcha]
+      # Both keys must be present to enable recaptcha
+      siteKey           = "" # Site Key
+      encryptedKey      = ""
+
+[menu]
+  # Sets the menu items in the navigation bar
+  # Identifier prepends a Font Awesome icon to the menu item
+  [[menu.main]]
+    name              = "Home"
+    url               = "/"
+    identifier        = "fas fa-home"
+    weight            = 1
+
+  [[menu.main]]
+    name              = "About"
+    url               = "/about/"
+    identifier        = "far fa-id-card"
+    weight            = 2
+
+  [[menu.main]]
+    name              = "Blog"
+    url               = "/blog/"
+    identifier        = "far fa-newspaper"
+    weight            = 3
+
+  [[menu.main]]
+    name              = "Categories"
+    url               = "/categories/"
+    identifier        = "fas fa-sitemap"
+    weight            = 5
+
+  [[menu.main]]
+    name              = "Contact"
+    url               = "/contact/"
+    identifier        = "far fa-envelope"
+    weight            = 6
+
+
+
+# Sets Social Media icons to appear and link to your account. Value should be your
+# username unless otherwise noted. These are the icons affected by socialAppearAtTop
+# and socialAppearAtBottom.
+[social]
+  # Coding Communities
+  github                = "pacollins/hugo-future-imperfect-slim"
+  stackoverflow         = "" # User Number
+  # Professional/Business Oriented Communities
+  linkedin              = "example"
+  slideshare            = ""
+  # Social Networks
+  youtube               = ""
+  twitter               = "example"
+  # Email
+  email                 = "example"
